# vacancies-scraper

./: .flake8  README.md  config.py  main.py  pyproject.toml  scrapy.cfg
vacancies_analysis/: analysis.py  visualization.py
vacancies_scraper/: items.py  middlewares.py  pipelines.py  scraper.py  settings.py
vacancies_scraper/spiders/: dou.py  work_ua.py
