[project]
name = "vacancies-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykyta Fabrykator",email = "mykyta.fabrykator@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.2"
scrapy = "^2.12.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
nltk = "^3.9.1"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
